Phase 2 Implementation: Enhanced lesson block UI with modern CSS and animations
- Updated lesson templates to include enhanced CSS files
- Refactored lessonRenderer.js to use new CSS class structure
- Updated LessonRenderer component with enhanced block styling
- Added progress animation utilities and feedback systems
- Created comprehensive test page for enhanced UI
- Implemented modern block types with improved visual hierarchy
- Added completion animations and progress indicators
- Enhanced code blocks with better syntax highlighting structure
- Improved interactive challenge blocks with better UX
- Updated quiz blocks with modern assessment UI

--- a/test_live_lesson_progress.html
+++ b/test_live_lesson_progress.html
@@ -7,6 +7,9 @@
     <meta name="lesson-id" content="python-basics-01">
     <link rel="stylesheet" href="/static/css/lesson.css">
     <link rel="stylesheet" href="/static/css/components/lesson-content-blocks.css">
+    <link rel="stylesheet" href="/static/css/components/lesson-blocks-enhanced.css">
+    <link rel="stylesheet" href="/static/css/components/lesson-block-types.css">
+    <link rel="stylesheet" href="/static/css/components/lesson-progress-enhanced.css">
     <style>
         body {
             font-family: Arial, sans-serif;
